# scripts

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _transcripts.py  channel_monitor.py  pyproject.toml  requirements.txt  youtube_processor.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
YouTube/: .env.example  README.md  channel_monitor.py  channels.py  common.py  requirements.txt  youtube_processor.py  yt_digest.py  yt_key_moments.py  yt_notify.py  yt_pipeline.py  yt_summarizer.py
YouTube/tests/: test_common.py  test_notify.py  test_pipeline.py  test_summarizer.py
scripts/: EXTENSION_CATEGORIES.md  yt_key_moments.py  yt_notify.py  yt_pipeline.py
youtube-monitor/: README.md  __init__.py  monitor.py  processor.py  requirements.txt  transcripts.py
