[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-automation-scripts"
version = "0.2.0"
description = "CLI automation for YouTube monitoring, transcripts, summaries, and digests."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "feedparser>=6.0.0",
  "youtube-transcript-api>=0.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["YouTube/tests"]
pythonpath = ["YouTube"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["YouTube"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
